# MFSCE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: alu.hpp  cpu.hpp  decoder.hpp  pc.hpp  ram.hpp  register.hpp  resister.hpp
src/: alu.cpp  binary_loader.cpp  cpu.cpp  decoder.cpp  elfloder.cpp  main.cpp  pc.cpp  ram.cpp  register.cpp  resister.cpp
testcode/: link.ld  makefile  start.S  test.c  test.elf
